# lite3_nav2

./: README.md
lite3_nav2_bringup/: package.xml  setup.cfg  setup.py
lite3_nav2_bringup/launch/: lite3_nav2_navigation.launch.py
lite3_nav2_bringup/lite3_nav2_bringup/: follow_path_goal_gen.py  follow_path_sequence_executor.py  send_follow_path.py  visualize_waypoints.py
lite3_nav2_bringup/params/: follow_path_wait_from_topic.xml  nav2_params.yaml  waypoints.yaml
lite3_nav2_bt_nodes/: CMakeLists.txt  bt_plugins.xml  package.xml
lite3_nav2_bt_nodes/src/: path_from_topic.cpp
