<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lite3_nav2_bt_nodes</name>
  <version>0.0.0</version>
  <description>Custom BT nodes for Lite3 Nav2 integration.</description>
  <maintainer email="mingqian.chen@tum.de">chen</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

